# toys

./: .editorconfig  .gitignore  .gitmodules  .lili-ignore  .rubocop.yml  .tool-versions  .travis.yml  .yamllint  Gemfile  LICENSE.md  Makefile  README.md  Rakefile  go.mod  install  install.mk  jenvrc  makefile  package.json  publish-docs  publish-docs.sh  sample.envrc
R/: README.md  args.R  hello.R
applescript/: EmptyTrash.scpt  Firefox-dev.scpt  SwitchProxy.scpt
ash/: Makefile  README.md
asm/: README.md
automata/: Makefile  README.md  automata  automata.c  automata.rb  makefile
awk/: README.md  echo.awk  fizzy.awk  hello.awk
bash/: .envrc  Guardfile  Makefile  README.md  stw
bf/: .gitignore  Brainfuck.java  README.md  VM.java  bell.bf  bell.bs  bf.c  bf.py  bf.rb  bs.py  echo.bf  hello.bf  hello.bs  rot13.bs
bmake/: README.md
c/: .gitignore  README.md  hello.c  hello.ch  htoi.c  magic.c  parhello.c  slug.c  wc.c  yubnub.c
c/args/: CMakeLists.txt  DEVELOPMENT.md  Dockerfile  Doxyfile  Makefile  README.md  args  args.c  clean-cmake.sh  graph_legend.html  index.html  main_8c__incl.map
c/args/lib/: args.c  main.c
c/args/search/: all_0.js  functions_0.js
c/args/src/cmd/args/: main.c
c/echo/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Makefile  README.md  echo.c  globals_func.html  main_8c__incl.map  main_8c__incl.md5
c/echo/lib/: echo.c  main.c
c/echo/search/: all_0.js
c/echo/src/cmd/echo/: main.c
c/flip/: .gitignore  .lili-ignore  CMakeLists.txt  Guardfile-lint  Makefile  flip  flip.c  makefile  test.txt.flip
c/flip/lib/: flip.c
c/hextime/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Makefile  README.md  dir_000004_000000.html  dir_16b01d743d41baa469e6ef9d733204b2.html  dir_16b01d743d41baa469e6ef9d733204b2_dep.map  dir_16b01d743d41baa469e6ef9d733204b2_dep.md5  dir_1afcbc2c12d4a18c5e3c920364e0b0be.html  dir_8a0776572ba2252f65a895457421e228.html  dir_8a0776572ba2252f65a895457421e228_dep.map  dir_8a0776572ba2252f65a895457421e228_dep.md5  files.html  globals.html  globals_func.html  hextime.c  hextime_8c.html  hextime_8c__incl.md5  hextime_8h.html  hextime_8h__dep__incl.md5  hextime_8h__incl.map  hextime_8h_source.html  index.html  main_8c.html  main_8c__incl.map
c/hextime/include/hextime/: hextime.h
c/hextime/lib/: hextime.c  hextime.h  main.c
c/hextime/search/: all_0.js  functions_0.js
c/hextime/src/: hextime.c
c/hextime/src/cmd/hextime/: main.c
c/magic/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Guardfile-lint  Makefile  README.md  clean-cmake.sh  dir_c68d2de0d6d8fc135864a493b914d351.html  files.html  globals_func.html  graph_legend.html  magic.c  main_8c.html  main_8c__incl.map  main_8c__incl.md5
c/magic/lib/: magic.c  main.c
c/magic/search/: functions_0.js
chicken/: Makefile  README.md  age.scm  args.scm  binarysearch.scm  bindec.scm  casting-spels.scm  decbin.scm  fib.scm  hanoi.scm  hello.scm  one.million.fibonacci.txt  palindrome.scm  power.scm
cl/: .gitignore  README.md  casting.lisp  cd.lisp  greeter.lisp  pike.lisp  (+5 more)
cpp/args/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Guardfile  Guardfile-lint  Makefile  README.md  args.cpp
cpp/args/lib/: args.cpp
cpp/args/src/cmd/args/: main.cpp
cpp/hello/: CMakeLists.txt  DEVELOPMENT.md  Dockerfile  Doxyfile  Guardfile  Guardfile-lint  Makefile  README.md  hello.cpp
cpp/hello/lib/: hello.cpp
haskell/bank/: Bank.hs  Makefile  Shakefile.hs  bank.cabal
haskell/bank/src/: Bank.hs
haskell/bird/: Bird.lhs  Makefile  Shakefile.hs  bird.cabal
haskell/bird/src/: Bird.lhs
haskell/bloomtest/: .gitignore  Bloomtest.hs  Makefile  Shakefile.hs  bloomtest.cabal  bloomtest.hs
haskell/bloomtest/src/: Bloomtest.hs
haskell/books/: Books.hs  Makefile  Shakefile.hs  books.cabal
haskell/books/src/: Book.hs
haskell/books/testsuite/: TestRunner.hs
haskell/books/testsuite/tests/: BookTest.hs
haskell/complain/: .gitignore  Complain.hs  Makefile  Shakefile.hs  complain.cabal
haskell/complain/src/: Complain.hs
haskell/dbool/: DBool.hs  Makefile  Shakefile.hs  dbool.cabal  dbool.hs
haskell/dbool/src/: DBool.hs
haskell/dbool/testsuite/: TestRunner.hs
haskell/dbool/testsuite/tests/: DBoolTest.hs
haskell/echo/: Makefile  Shakefile.hs  echo.cabal  echo.hs
haskell/echo/src/: Echo.hs
haskell/fibber/: .gitignore  Makefile  Shakefile.hs  fibber.cabal  fibber.hs
haskell/fizzy/: Makefile  Shakefile.hs  fizzy.cabal  fizzy.hs
haskell/fizzy/src/: CLI.hs  Fizzy.hs
haskell/getoptfu/: Shakefile.hs  getoptfu.cabal
haskell/getoptfu/src/: GetOptFu.hs
haskell/gnomes/: Shakefile.hs  gnomes.cabal
haskell/gnomes/src/: Gnomes.hs
haskell/groceries/: Shakefile.hs  groceries.cabal
haskell/groceries/src/: Groceries.hs
haskell/hello/: Hello.hs  Makefile  Shakefile.hs  hello.cabal
haskell/ios7crypt/: LICENSE.md  Shakefile.hs  ios7crypt.cabal
haskell/ios7crypt/src/: CLI.hs  IOS7Crypt.hs
haskell/ios7crypt/testsuite/: TestRunner.hs
haskell/ios7crypt/testsuite/tests/: IOS7CryptTest.hs
haskell/magic/: Makefile  Shakefile.hs  magic.cabal  magic.hs
haskell/magic/src/: Magic.hs
haskell/maths/: Shakefile.hs  maths.cabal
haskell/maths/src/: Maths.hs
haskell/me/: Shakefile.hs  me.cabal
haskell/me/src/: Me.hs
haskell/mool/: Makefile  Mool.hs  Shakefile.hs  mool.cabal
haskell/mool/src/: CLI.hs  Mool.hs
haskell/mool/testsuite/: TestRunner.hs
haskell/mool/testsuite/tests/: MoolTest.hs
haskell/orwell/: Makefile  Orwell.hs  Shakefile.hs  orwell.cabal
haskell/orwell/src/: Orwell.hs
haskell/orwell/testsuite/: TestRunner.hs
haskell/orwell/testsuite/tests/: OrwellTest.hs
haskell/petstore/: .gitignore  Dog.hs  Makefile  Petstore.hs  Shakefile.hs  petstore.cabal
haskell/petstore/src/: Cat.hs  CatCLI.hs  Dog.hs  Petstore.hs
haskell/philabuster/: .gitignore  Makefile  Philabuster.hs  Shakefile.hs  philabuster.cabal
haskell/philabuster/src/: Philabuster.hs
haskell/roll/: .gitignore  Makefile  Roll.hs  Shakefile.hs  roll.cabal
haskell/roll/src/: Roll.hs
haskell/shpidertest/: Shakefile.hs  shpidertest.cabal
haskell/shpidertest/src/: Shpidertest.hs
(+2853 files in other folders)
