name:           bird
version:        0.0.1
category:       Tutorial
synopsis:       LHS example
description:    An example of Literate Haskell
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable bird
  build-depends:
    base >= 4.3.1.0 && < 5

  main-is: Bird.lhs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
