name:           bloomest
version:        0.0.1
category:       Tutorial
synopsis:       bloom table example
description:    An example minimal space table with bloom filters
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable bloomest
  build-depends:
    base >= 4.3.1.0 && < 5,
    bloomfilter >= 2.0.1.0 && < 3

  main-is: Bloomtest.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
