name:           echo
version:        0.0.1
category:       Tutorial
synopsis:       I/O example
description:    An application that echoes text input back to the terminal
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable bank
  build-depends:
    base >= 4.3.1.0 && < 5

  main-is: Echo.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
