name:           fibber
version:        0.0.1
category:       Math
synopsis:       naive fibonacci
description:    A recursive fibonacci library
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

library
  build-depends:
    base >= 4.3.1.0 && < 5

  exposed-modules: Fibber

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable fibber
  build-depends:
    base >= 4.3.1.0 && < 5

  other-modules: Fibber

  ghc-options: -Wall -fwarn-tabs
  main-is: CLI.hs
  hs-source-dirs: src
