name:           fibber
version:        0.0.1
category:       Math
synopsis:       naive fibonacci
description:    A recursive fibonacci library
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
    type:     git
    location: https://github.com/mcandre/toys.git

library
    build-depends:
        base >= 4.3.1.0 && < 5

    exposed-modules: Fibber

    ghc-options: -Wall -fwarn-tabs
    hs-source-dirs: src

executable fibber
    build-depends:
        base >= 4.3.1.0 && < 5

    other-modules: Fibber

    ghc-options: -Wall -fwarn-tabs
    main-is: CLI.hs
    hs-source-dirs: src

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            CLI.hs
    type:               exitcode-stdio-1.0
