name:           getoptfu
version:        0.0.1
category:       Tutorial
synopsis:       poor man's getopt
description:    a simple command line option parsing library
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

library
  build-depends:
    base >= 4.6.0.1 && < 5,
    syb  >= 0.7 && < 0.8

  exposed-modules: GetOptFu

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src
