name:           gnomes
version:        0.0.1
category:       Tutorial
synopsis:       graphviz example
description:    A graphviz application that renders a gnomic plan
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
    type:     git
    location: https://github.com/mcandre/toys.git

executable gnomes
    build-depends:
        base     >= 4.3.1.0 && < 5,
        graphviz >= 2999.19.0.0 && < 2999.20

    main-is: Gnomes.hs
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        graphviz                    >= 2999.19.0.0 && < 2999.20,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            Gnomes.hs
    type:               exitcode-stdio-1.0
