name:           hello
version:        0.0.1
category:       Tutorial
synopsis:       Hello World
description:    A bit overengineered Hello World application
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable hello
  build-depends:
    base >= 4.3.1.0 && < 5

  main-is: Hello.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
