name:           ios7crypt
version:        0.0.1
category:       Cryptography
synopsis:       Cisco IOS v7 symmetric encryption
description:    Symmetric cipher for legacy routers
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

library
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    random                      >= 1.1 && < 2,
    parallel                    >= 3.2.0.3 && < 4,
    QuickCheck                  >= 2.11.3 && < 3,
    getoptfu                    >= 0.0.1 && < 0.0.2

  exposed-modules: IOS7Crypt

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable ios7crypt
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    random                      >= 1.1 && < 2,
    parallel                    >= 3.2.0.3 && < 4,
    QuickCheck                  >= 2.11.3 && < 3,
    getoptfu                    >= 0.0.1 && < 0.0.2,
    syb                         >= 0.7 && < 0.8

  main-is: CLI.hs
  other-modules: IOS7Crypt
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs

test-suite reference
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    random                      >= 1.1 && < 2,
    parallel                    >= 3.2.0.3 && < 4,
    QuickCheck                  >= 2.11.3 && < 3,
    getoptfu                    >= 0.0.1 && < 0.0.2,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    HUnit

  ghc-options:        -Wall -fwarn-tabs
  other-modules: IOS7Crypt, IOS7CryptTest
  hs-source-dirs:     testsuite/tests, testsuite, src, .
  main-is:            testsuite/TestRunner.hs
  type:               exitcode-stdio-1.0
