name:           magic
version:        0.0.1
category:       Cryptography
synopsis:       leaked disc decryption key
description:    A t-shirt ready disc key
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable magic
  build-depends:
    base     >= 4.3.1.0 && < 5,
    parallel >= 3.2.1.1 && < 4

  main-is: Magic.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
