name:           maths
version:        0.0.1
category:       Tutorial
synopsis:       wizard functions, parallelized
description:    Some interesting mathematical functions
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable maths
  build-depends:
    base     >= 4.3.1.0 && < 5,
    parallel >= 3.2.1.1 && < 4

  main-is: Maths.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
