name:           me
version:        0.0.1
category:       Tutorial
synopsis:       graphviz example
description:    A graphviz application that renders a funny graph
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable me
  build-depends:
    base     >= 4.3.1.0 && < 5,
    graphviz >= 2999.19.0.0 && < 2999.20

  main-is: Me.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
