name:           mool
version:        0.0.1
category:       Tutorial
synopsis:       useless data structures
description:    useless generalized algebraic data types
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

library
  build-depends:
    base >= 4.3.1.0 && < 5

  exposed-modules: Mool

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable mool
  build-depends:
    base >= 4.3.1.0 && < 5

  main-is: CLI.hs
  other-modules: Mool
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
