name:           orwell
version:        0.0.1
category:       Tutorial
synopsis:       kowai jokes
description:    orwellian data types
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

library
  build-depends:
    base                        >= 4.6.0.1 && < 5,
    QuickCheck                  >= 2.11.3 && < 2.13,
    generic-random              >= 1.2.0.0 && < 2.0

  exposed-modules: Orwell

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

test-suite reference
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    hlint                       >= 2.1.10 && < 3,
    shake                       >= 0.16.4 && < 0.17,
    QuickCheck                  >= 2.11.3 && < 2.13,
    generic-random              >= 1.2.0.0 && < 2.0,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    HUnit

  other-modules: Orwell, OrwellTest

  ghc-options:        -Wall -fwarn-tabs
  hs-source-dirs:     testsuite/tests, testsuite, src, .
  main-is:            testsuite/TestRunner.hs
  type:               exitcode-stdio-1.0
